syntax = "proto2";

option java_multiple_files = true;
option java_package = "com.r3.sgx.enclavelethost.grpc";
option java_outer_classname = "EnclaveletHostApi";
option objc_class_prefix = "HLW";

package proto;

service EnclaveletHost {
    // Request a signed quote of the enclave instance.
    rpc GetEpidAttestation (GetEpidAttestationRequest) returns (GetEpidAttestationResponse);

    // Establish a session with an enclave.
    rpc OpenSession (stream ClientMessage) returns (stream ServerMessage);
}

message GetEpidAttestationRequest {
}

message GetEpidAttestationResponse {
    required EpidAttestation attestation = 1;
}

message ClientMessage {
    required bytes blob = 1;
}

message ServerMessage {
    required bytes blob = 1;
}

message EpidAttestation {
    required bytes report = 1;
    required bytes signature = 2;
    required bytes cert_path = 3;
}
